[tool.poetry]
name = "elphick-template"
version = "0.1.0"
description = ""
authors = ["Greg <11791585+elphick@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "elphick_template"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
sphinx = "^5.0.2"
sphinx-rtd-theme = "^1.0.0"
sphinx-gallery = "^0.11.1"
sphinx-autodoc-typehints = "^1.18.3"
myst-parser = "^0.18.0"
orca = "^1.8"  # for plotly thumbnails in docs
matplotlib = "^3.7.2"
# packages below here are for demonstration and can likely be removed once the template is utilised.
plotly = "^5.15.0"
mass-composition = {extras = ["network", "viz"], version = "^0.1.19"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
